--- a/src/app/paciente-historicos/historico-social/fieldset-historico-social/fieldset-historico-social.component.html
+++ b/src/app/paciente-historicos/historico-social/fieldset-historico-social/fieldset-historico-social.component.html
@@ -228,7 +228,7 @@
     [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '65vh'}">
 
     <p-header>
-        Exclusão de Histórico Social
+        Excluir Histórico Social
     </p-header>
 
     <div>
@@ -242,9 +242,9 @@
             Voltar
         </button>
 
-        <button class="btn btn-success" [disabled]="processandoOperacao" 
+        <button class="btn btn-success" [disabled]="processandoExclusao" 
             (click)="excluirHistoricoSocial()">
-            <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
+            <i class="fas " [ngClass]="processandoExclusao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
             Confirmar
         </button>
     </p-footer>
