--- a/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
+++ b/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
@@ -69,6 +69,12 @@
             </app-fieldset-historico-alimentar>
         </div>
     </div>
+
+    <div class="col-12 col-md-6 mt-3">
+        <app-historico-questionario-frequencia-alimentar [paciente]="paciente"
+            [informacoesPreviasQuestionarios]="historicosPaciente.informacoesPreviasQuestionariosFrequenciaAlimentar">
+        </app-historico-questionario-frequencia-alimentar>
+    </div>
 </div>
 
 
