Finalização da implementação do componente de medicamento

--- a/src/app/paciente/tabela-pacientes/tabela-pacientes.component.html
+++ b/src/app/paciente/tabela-pacientes/tabela-pacientes.component.html
@@ -116,7 +116,7 @@
     [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '50vh'}">
 
     <p-header>
-        Exclusão de Paciente
+        Excluir Paciente
     </p-header>
 
     <div>
