Implementação do componente de suplemento

--- a/src/app/paciente-historicos/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar.component.html
@@ -1,4 +1,4 @@
-<p-fieldset [toggleable]="true" [collapsed]="false">
+<p-fieldset [toggleable]="true" [collapsed]="true">
 
     <p-header>
         Questionário Frequência Alimentar
